...
  return (
    <View testID="products" style={styles.container}>
      <Stack.Screen
        options={{
          headerRight: () => (
            <Icon
              testID="products.three-bars"
              name="three-bars"
              size={20}
              color={theme.secondary}
              onPress={() => router.push('/settings')}
            />
          ),
...
